# WikiRunner

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  Pictures.qrc  Pictures.qrc.autosave  main.cpp
CreateRoomWindow/: CMakeLists.txt  createroomwindow.cpp  createroomwindow.h  createroomwindow.ui  createroomwindow.ui.autosave
GameWindow/: CMakeLists.txt  gamewindow.h  gamewindow.ui
LocalSettings/: Person.json  Peson.json
MainWindow/: CMakeLists.txt  CMakeLists.txt.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui
MenuWindow/: CMakeLists.txt  menuwindow.cpp  menuwindow.h  menuwindow.ui
PersonClass/: CMakeLists.txt  personclass.cpp  personclass.h
RegWindow/: CMakeLists.txt  CMakeLists.txt.autosave  regwindow.cpp  regwindow.h  regwindow.h.autosave  regwindow.ui
WebSocketServer/: CMakeLists.txt
WebSocketServer/WebSocketServer/: websocketserver.cpp  websocketserver.h
